--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,21 +2,47 @@
 <html lang="en">
     <head>
         <title>Shoppinglist</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     </head>
     <body>
-        <h1>Shoppinglist</h1>
-        <ul> </ul>
+        <nav>
+            <div class="nav-wrapper">
+                <a class="brand-logo center">Shoppinglist</a>
+            </div>
+        </nav>
+        <ul></ul>
+
         <script>
         const electron = require('electron');
         const {ipcRenderer} = electron;
         const ul = document.querySelector('ul');
-
+        
+        //Add item
         ipcRenderer.on('item:add', function(e, item){
+            ul.className = 'collection';
             const li = document.createElement('li');
+            li.className = 'collection-item'
             const itemText = document.createTextNode(item);
             li.appendChild(itemText);
             ul.appendChild(li);
         });
+
+        //Clear item
+        ipcRenderer.on('item:clear', function(){
+            ul.innerHTML = '';
+            ul.classname = '';
+        });
+
+        //Rmove item
+        ul.addEventListener('dblclick', removeitem);
+
+        function removeitem(e){
+            e.target.remove();
+            if(ul.children.length == 0){
+                ul.className = '';
+            }
+        }
+
         </script>
     </body>
 </html>
