--- a/addTestWindow.html
+++ b/addTestWindow.html
@@ -3,11 +3,33 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="addTestWindow.css">
     </head>
     <body>
+        <div>
+            <img id="gen-img" src="images/HappyPear.jpg" width="300" height="275">
+        </div>
+        <div>
+            <input class="randombutton" type="button" value="Randomize" onclick="randomimg()"></input>
+        </div>
         <script>
             const electron = require('electron');
             const {ipcRenderer} = electron;
+
+            function randomimg() {
+                console.log("hello");
+                var myImages = new Array();
+                myImages[0] = "images/HappyPear.jpg";
+                myImages[1] = "images/PizzaWork.jpg";
+                myImages[2] = "images/AbitChili.jpg";
+                myImages[3] = "images/FriendChip.jpg";
+                myImages[4] = "images/KiwiBeFriends.jpg";
+                var rnd = Math.floor(Math.random() * myImages.length);
+                if  (rnd == 0) {
+                    rnd = 1;
+                }
+                document.getElementById("gen-img").src = myImages[rnd];
+            }
         </script>
     </body>
 </html>
