--- a/addTestWindow.html
+++ b/addTestWindow.html
@@ -24,6 +24,9 @@
                 myImages[2] = "images/AbitChili.jpg";
                 myImages[3] = "images/FriendChip.jpg";
                 myImages[4] = "images/KiwiBeFriends.jpg";
+                myImages[5] = "images/BigDill.jpg";
+                myImages[6] = "images/ICouldBeCheddar.jpg";
+                myImages[7] = "images/TwoToMango.jpg";
                 var rnd = Math.floor(Math.random() * myImages.length);
                 if  (rnd == 0) {
                     rnd = 1;
